--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -25,11 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PLAY\n",
+      "FILLING\n",
+      "BAR\n",
+      "THEATRE\n",
+      "EASYGOING\n",
+      "DATE\n",
+      "LEAD\n",
+      "THAT\n",
+      "STORY\n",
+      "ISLAND\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here \n"
+    "# your code here \n",
+    "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story', 'island']\n",
+    "\n",
+    "for word in words:\n",
+    "    print(word.upper())"
    ]
   },
   {
@@ -41,11 +62,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PAY\n",
+      "BAR\n",
+      "DATE\n",
+      "LEAD\n",
+      "THAT\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "words = ['pay', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story', 'island']\n",
+    "\n",
+    "for word in words:\n",
+    "    if len(word) < 5:\n",
+    "       print(word.upper())"
    ]
   },
   {
@@ -57,11 +95,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "THEATRE\n",
+      "THAT\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code hereword\n",
+    "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story', 'island']\n",
+    "for word in words: \n",
+    "    if word[0] == 't':\n",
+    "        print(word.upper())"
    ]
   },
   {
@@ -80,11 +131,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "a = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']\n",
+    "\n",
+    "for number in a:\n",
+    "    print(int(number) * int(number))"
    ]
   },
   {
@@ -96,11 +168,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "9\n",
+      "25\n",
+      "49\n",
+      "81\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "for number in a:\n",
+    "    if number % 2 != 0:\n",
+    "        print(int(number) * int(number))"
    ]
   },
   {
@@ -112,11 +200,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n",
+      "256\n",
+      "576\n",
+      "1024\n",
+      "1600\n",
+      "2304\n",
+      "3136\n",
+      "4096\n",
+      "5184\n",
+      "6400\n",
+      "7744\n",
+      "9216\n",
+      "10816\n",
+      "12544\n",
+      "14400\n",
+      "16384\n",
+      "18496\n",
+      "20736\n",
+      "23104\n",
+      "25600\n",
+      "28224\n",
+      "30976\n",
+      "33856\n",
+      "36864\n",
+      "40000\n",
+      "43264\n",
+      "46656\n",
+      "50176\n",
+      "53824\n",
+      "57600\n",
+      "61504\n",
+      "65536\n",
+      "69696\n",
+      "73984\n",
+      "78400\n",
+      "82944\n",
+      "87616\n",
+      "92416\n",
+      "97344\n",
+      "102400\n",
+      "107584\n",
+      "112896\n",
+      "118336\n",
+      "123904\n",
+      "129600\n",
+      "135424\n",
+      "141376\n",
+      "147456\n",
+      "153664\n",
+      "160000\n",
+      "166464\n",
+      "173056\n",
+      "179776\n",
+      "186624\n",
+      "193600\n",
+      "200704\n",
+      "207936\n",
+      "215296\n",
+      "222784\n",
+      "230400\n",
+      "238144\n",
+      "246016\n",
+      "254016\n",
+      "262144\n",
+      "270400\n",
+      "278784\n",
+      "287296\n",
+      "295936\n",
+      "304704\n",
+      "313600\n",
+      "322624\n",
+      "331776\n",
+      "341056\n",
+      "350464\n",
+      "360000\n",
+      "369664\n",
+      "379456\n",
+      "389376\n",
+      "399424\n",
+      "409600\n",
+      "419904\n",
+      "430336\n",
+      "440896\n",
+      "451584\n",
+      "462400\n",
+      "473344\n",
+      "484416\n",
+      "495616\n",
+      "506944\n",
+      "518400\n",
+      "529984\n",
+      "541696\n",
+      "553536\n",
+      "565504\n",
+      "577600\n",
+      "589824\n",
+      "602176\n",
+      "614656\n",
+      "627264\n",
+      "640000\n",
+      "652864\n",
+      "665856\n",
+      "678976\n",
+      "692224\n",
+      "705600\n",
+      "719104\n",
+      "732736\n",
+      "746496\n",
+      "760384\n",
+      "774400\n",
+      "788544\n",
+      "802816\n",
+      "817216\n",
+      "831744\n",
+      "846400\n",
+      "861184\n",
+      "876096\n",
+      "891136\n",
+      "906304\n",
+      "921600\n",
+      "937024\n",
+      "952576\n",
+      "968256\n",
+      "984064\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "number_limit = 1\n",
+    "\n",
+    "while number_limit <1000:\n",
+    "    if number_limit % 8 == 0:\n",
+    "        print(int(number_limit) * int(number_limit))\n",
+    "\n",
+    "    number_limit += 1"
    ]
   },
   {
@@ -170,11 +396,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of people: 15\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "people = [\n",
+    "    {\n",
+    "        \"name\": \"Juan\",\n",
+    "        \"age\": 34,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Pepe\",\n",
+    "        \"age\": 27,\n",
+    "        \"n_kids\": 0\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Sonia\",\n",
+    "        \"age\": 41,\n",
+    "        \"n_kids\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Lucía\",\n",
+    "        \"age\": 22,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Leo\",\n",
+    "        \"age\": 55,\n",
+    "        \"n_kids\": 5\n",
+    "    }\n",
+    "]\n",
+    "number_kids = 0\n",
+    "for person in people:\n",
+    "    number_kids = number_kids + person[\"n_kids\"]\n",
+    "    \n",
+    "print(\"Number of people:\", len(people) + number_kids)\n",
+    "    "
    ]
   },
   {
@@ -190,7 +457,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "people = [\n",
+    "    {\n",
+    "        \"name\": \"Juan\",\n",
+    "        \"age\": 34,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Pepe\",\n",
+    "        \"age\": 27,\n",
+    "        \"n_kids\": 0\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Sonia\",\n",
+    "        \"age\": 41,\n",
+    "        \"n_kids\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Lucía\",\n",
+    "        \"age\": 22,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Leo\",\n",
+    "        \"age\": 55,\n",
+    "        \"n_kids\": 5\n",
+    "    }\n",
+    "]\n",
+    "\n"
    ]
   },
   {
@@ -202,11 +497,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total kids are: 10\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "people = [\n",
+    "    {\n",
+    "        \"name\": \"Juan\",\n",
+    "        \"age\": 34,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Pepe\",\n",
+    "        \"age\": 27,\n",
+    "        \"n_kids\": 0\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Sonia\",\n",
+    "        \"age\": 41,\n",
+    "        \"n_kids\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Lucía\",\n",
+    "        \"age\": 22,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Leo\",\n",
+    "        \"age\": 55,\n",
+    "        \"n_kids\": 5\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "kids_total = 0\n",
+    "for person in people:\n",
+    "    kids_total = kids_total + person['n_kids']\n",
+    "    \n",
+    "    \n",
+    "print(\"total kids are:\", kids_total)\n"
    ]
   },
   {
@@ -218,11 +555,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sonia\n",
+      "Lucía\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "people = [\n",
+    "    {\n",
+    "        \"name\": \"Juan\",\n",
+    "        \"age\": 34,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Pepe\",\n",
+    "        \"age\": 27,\n",
+    "        \"n_kids\": 0\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Sonia\",\n",
+    "        \"age\": 41,\n",
+    "        \"n_kids\": 1\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Lucía\",\n",
+    "        \"age\": 22,\n",
+    "        \"n_kids\": 2\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"Leo\",\n",
+    "        \"age\": 55,\n",
+    "        \"n_kids\": 5\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "for person in people:\n",
+    "    if person[\"name\"][-1] == 'a':\n",
+    "        print(person[\"name\"]) \n"
    ]
   }
  ],
