--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -62,27 +62,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PAY\n",
-      "BAR\n",
-      "DATE\n",
-      "LEAD\n",
-      "THAT\n"
+      "FILLING\n",
+      "THEATRE\n",
+      "EASYGOING\n",
+      "STORY\n",
+      "ISLAND\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "words = ['pay', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story', 'island']\n",
     "\n",
     "for word in words:\n",
-    "    if len(word) < 5:\n",
+    "    if len(word) >= 5:\n",
     "       print(word.upper())"
    ]
   },
@@ -95,15 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "THEATRE\n",
-      "THAT\n"
+      "THEATRE\n"
      ]
     }
    ],
@@ -112,7 +110,8 @@
     "words = ['play', 'filling', 'bar', 'theatre', 'easygoing', 'date', 'lead', 'that', 'story', 'island']\n",
     "for word in words: \n",
     "    if word[0] == 't':\n",
-    "        print(word.upper())"
+    "        print(word.upper())\n",
+    "        break"
    ]
   },
   {
@@ -131,32 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "4\n",
-      "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n",
-      "100\n"
+      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "a = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']\n",
+    "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "\n",
+    "List_squares = []\n",
     "for number in a:\n",
-    "    print(int(number) * int(number))"
+    "    square = number**2\n",
+    "    List_squares.append(square)\n",
+    "\n",
+    "print(List_squares)\n"
    ]
   },
   {
@@ -168,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +182,8 @@
     "a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "for number in a:\n",
     "    if number % 2 != 0:\n",
-    "        print(int(number) * int(number))"
+    "        odd = (number * number)\n",
+    "        print(odd)"
    ]
   },
   {
@@ -200,149 +195,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64\n",
-      "256\n",
-      "576\n",
-      "1024\n",
-      "1600\n",
-      "2304\n",
-      "3136\n",
-      "4096\n",
-      "5184\n",
-      "6400\n",
-      "7744\n",
-      "9216\n",
-      "10816\n",
-      "12544\n",
-      "14400\n",
-      "16384\n",
-      "18496\n",
-      "20736\n",
-      "23104\n",
-      "25600\n",
-      "28224\n",
-      "30976\n",
-      "33856\n",
-      "36864\n",
-      "40000\n",
-      "43264\n",
-      "46656\n",
-      "50176\n",
-      "53824\n",
-      "57600\n",
-      "61504\n",
-      "65536\n",
-      "69696\n",
-      "73984\n",
-      "78400\n",
-      "82944\n",
-      "87616\n",
-      "92416\n",
-      "97344\n",
-      "102400\n",
-      "107584\n",
-      "112896\n",
-      "118336\n",
-      "123904\n",
-      "129600\n",
-      "135424\n",
-      "141376\n",
-      "147456\n",
-      "153664\n",
-      "160000\n",
-      "166464\n",
-      "173056\n",
-      "179776\n",
-      "186624\n",
-      "193600\n",
-      "200704\n",
-      "207936\n",
-      "215296\n",
-      "222784\n",
-      "230400\n",
-      "238144\n",
-      "246016\n",
-      "254016\n",
-      "262144\n",
-      "270400\n",
-      "278784\n",
-      "287296\n",
-      "295936\n",
-      "304704\n",
-      "313600\n",
-      "322624\n",
-      "331776\n",
-      "341056\n",
-      "350464\n",
-      "360000\n",
-      "369664\n",
-      "379456\n",
-      "389376\n",
-      "399424\n",
-      "409600\n",
-      "419904\n",
-      "430336\n",
-      "440896\n",
-      "451584\n",
-      "462400\n",
-      "473344\n",
-      "484416\n",
-      "495616\n",
-      "506944\n",
-      "518400\n",
-      "529984\n",
-      "541696\n",
-      "553536\n",
-      "565504\n",
-      "577600\n",
-      "589824\n",
-      "602176\n",
-      "614656\n",
-      "627264\n",
-      "640000\n",
-      "652864\n",
-      "665856\n",
-      "678976\n",
-      "692224\n",
-      "705600\n",
-      "719104\n",
-      "732736\n",
-      "746496\n",
-      "760384\n",
-      "774400\n",
-      "788544\n",
-      "802816\n",
-      "817216\n",
-      "831744\n",
-      "846400\n",
-      "861184\n",
-      "876096\n",
-      "891136\n",
-      "906304\n",
-      "921600\n",
-      "937024\n",
-      "952576\n",
-      "968256\n",
-      "984064\n"
+      "[984064, 984064, 984064, 984064, 984064, 984064, 984064, 64, 64, 64, 64, 64, 64, 64, 64, 256, 256, 256, 256, 256, 256, 256, 256, 576, 576, 576, 576, 576, 576, 576, 576, 1024, 1024, 1024, 1024, 1024, 1024, 1024, 1024, 1600, 1600, 1600, 1600, 1600, 1600, 1600, 1600, 2304, 2304, 2304, 2304, 2304, 2304, 2304, 2304, 3136, 3136, 3136, 3136, 3136, 3136, 3136, 3136, 4096, 4096, 4096, 4096, 4096, 4096, 4096, 4096, 5184, 5184, 5184, 5184, 5184, 5184, 5184, 5184, 6400, 6400, 6400, 6400, 6400, 6400, 6400, 6400, 7744, 7744, 7744, 7744, 7744, 7744, 7744, 7744, 9216, 9216, 9216, 9216, 9216, 9216, 9216, 9216, 10816, 10816, 10816, 10816, 10816, 10816, 10816, 10816, 12544, 12544, 12544, 12544, 12544, 12544, 12544, 12544, 14400, 14400, 14400, 14400, 14400, 14400, 14400, 14400, 16384, 16384, 16384, 16384, 16384, 16384, 16384, 16384, 18496, 18496, 18496, 18496, 18496, 18496, 18496, 18496, 20736, 20736, 20736, 20736, 20736, 20736, 20736, 20736, 23104, 23104, 23104, 23104, 23104, 23104, 23104, 23104, 25600, 25600, 25600, 25600, 25600, 25600, 25600, 25600, 28224, 28224, 28224, 28224, 28224, 28224, 28224, 28224, 30976, 30976, 30976, 30976, 30976, 30976, 30976, 30976, 33856, 33856, 33856, 33856, 33856, 33856, 33856, 33856, 36864, 36864, 36864, 36864, 36864, 36864, 36864, 36864, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 40000, 43264, 43264, 43264, 43264, 43264, 43264, 43264, 43264, 46656, 46656, 46656, 46656, 46656, 46656, 46656, 46656, 50176, 50176, 50176, 50176, 50176, 50176, 50176, 50176, 53824, 53824, 53824, 53824, 53824, 53824, 53824, 53824, 57600, 57600, 57600, 57600, 57600, 57600, 57600, 57600, 61504, 61504, 61504, 61504, 61504, 61504, 61504, 61504, 65536, 65536, 65536, 65536, 65536, 65536, 65536, 65536, 69696, 69696, 69696, 69696, 69696, 69696, 69696, 69696, 73984, 73984, 73984, 73984, 73984, 73984, 73984, 73984, 78400, 78400, 78400, 78400, 78400, 78400, 78400, 78400, 82944, 82944, 82944, 82944, 82944, 82944, 82944, 82944, 87616, 87616, 87616, 87616, 87616, 87616, 87616, 87616, 92416, 92416, 92416, 92416, 92416, 92416, 92416, 92416, 97344, 97344, 97344, 97344, 97344, 97344, 97344, 97344, 102400, 102400, 102400, 102400, 102400, 102400, 102400, 102400, 107584, 107584, 107584, 107584, 107584, 107584, 107584, 107584, 112896, 112896, 112896, 112896, 112896, 112896, 112896, 112896, 118336, 118336, 118336, 118336, 118336, 118336, 118336, 118336, 123904, 123904, 123904, 123904, 123904, 123904, 123904, 123904, 129600, 129600, 129600, 129600, 129600, 129600, 129600, 129600, 135424, 135424, 135424, 135424, 135424, 135424, 135424, 135424, 141376, 141376, 141376, 141376, 141376, 141376, 141376, 141376, 147456, 147456, 147456, 147456, 147456, 147456, 147456, 147456, 153664, 153664, 153664, 153664, 153664, 153664, 153664, 153664, 160000, 160000, 160000, 160000, 160000, 160000, 160000, 160000, 166464, 166464, 166464, 166464, 166464, 166464, 166464, 166464, 173056, 173056, 173056, 173056, 173056, 173056, 173056, 173056, 179776, 179776, 179776, 179776, 179776, 179776, 179776, 179776, 186624, 186624, 186624, 186624, 186624, 186624, 186624, 186624, 193600, 193600, 193600, 193600, 193600, 193600, 193600, 193600, 200704, 200704, 200704, 200704, 200704, 200704, 200704, 200704, 207936, 207936, 207936, 207936, 207936, 207936, 207936, 207936, 215296, 215296, 215296, 215296, 215296, 215296, 215296, 215296, 222784, 222784, 222784, 222784, 222784, 222784, 222784, 222784, 230400, 230400, 230400, 230400, 230400, 230400, 230400, 230400, 238144, 238144, 238144, 238144, 238144, 238144, 238144, 238144, 246016, 246016, 246016, 246016, 246016, 246016, 246016, 246016, 254016, 254016, 254016, 254016, 254016, 254016, 254016, 254016, 262144, 262144, 262144, 262144, 262144, 262144, 262144, 262144, 270400, 270400, 270400, 270400, 270400, 270400, 270400, 270400, 278784, 278784, 278784, 278784, 278784, 278784, 278784, 278784, 287296, 287296, 287296, 287296, 287296, 287296, 287296, 287296, 295936, 295936, 295936, 295936, 295936, 295936, 295936, 295936, 304704, 304704, 304704, 304704, 304704, 304704, 304704, 304704, 313600, 313600, 313600, 313600, 313600, 313600, 313600, 313600, 322624, 322624, 322624, 322624, 322624, 322624, 322624, 322624, 331776, 331776, 331776, 331776, 331776, 331776, 331776, 331776, 341056, 341056, 341056, 341056, 341056, 341056, 341056, 341056, 350464, 350464, 350464, 350464, 350464, 350464, 350464, 350464, 360000, 360000, 360000, 360000, 360000, 360000, 360000, 360000, 369664, 369664, 369664, 369664, 369664, 369664, 369664, 369664, 379456, 379456, 379456, 379456, 379456, 379456, 379456, 379456, 389376, 389376, 389376, 389376, 389376, 389376, 389376, 389376, 399424, 399424, 399424, 399424, 399424, 399424, 399424, 399424, 409600, 409600, 409600, 409600, 409600, 409600, 409600, 409600, 419904, 419904, 419904, 419904, 419904, 419904, 419904, 419904, 430336, 430336, 430336, 430336, 430336, 430336, 430336, 430336, 440896, 440896, 440896, 440896, 440896, 440896, 440896, 440896, 451584, 451584, 451584, 451584, 451584, 451584, 451584, 451584, 462400, 462400, 462400, 462400, 462400, 462400, 462400, 462400, 473344, 473344, 473344, 473344, 473344, 473344, 473344, 473344, 484416, 484416, 484416, 484416, 484416, 484416, 484416, 484416, 495616, 495616, 495616, 495616, 495616, 495616, 495616, 495616, 506944, 506944, 506944, 506944, 506944, 506944, 506944, 506944, 518400, 518400, 518400, 518400, 518400, 518400, 518400, 518400, 529984, 529984, 529984, 529984, 529984, 529984, 529984, 529984, 541696, 541696, 541696, 541696, 541696, 541696, 541696, 541696, 553536, 553536, 553536, 553536, 553536, 553536, 553536, 553536, 565504, 565504, 565504, 565504, 565504, 565504, 565504, 565504, 577600, 577600, 577600, 577600, 577600, 577600, 577600, 577600, 589824, 589824, 589824, 589824, 589824, 589824, 589824, 589824, 602176, 602176, 602176, 602176, 602176, 602176, 602176, 602176, 614656, 614656, 614656, 614656, 614656, 614656, 614656, 614656, 627264, 627264, 627264, 627264, 627264, 627264, 627264, 627264, 640000, 640000, 640000, 640000, 640000, 640000, 640000, 640000, 652864, 652864, 652864, 652864, 652864, 652864, 652864, 652864, 665856, 665856, 665856, 665856, 665856, 665856, 665856, 665856, 678976, 678976, 678976, 678976, 678976, 678976, 678976, 678976, 692224, 692224, 692224, 692224, 692224, 692224, 692224, 692224, 705600, 705600, 705600, 705600, 705600, 705600, 705600, 705600, 719104, 719104, 719104, 719104, 719104, 719104, 719104, 719104, 732736, 732736, 732736, 732736, 732736, 732736, 732736, 732736, 746496, 746496, 746496, 746496, 746496, 746496, 746496, 746496, 760384, 760384, 760384, 760384, 760384, 760384, 760384, 760384, 774400, 774400, 774400, 774400, 774400, 774400, 774400, 774400, 788544, 788544, 788544, 788544, 788544, 788544, 788544, 788544, 802816, 802816, 802816, 802816, 802816, 802816, 802816, 802816, 817216, 817216, 817216, 817216, 817216, 817216, 817216, 817216, 831744, 831744, 831744, 831744, 831744, 831744, 831744, 831744, 846400, 846400, 846400, 846400, 846400, 846400, 846400, 846400, 861184, 861184, 861184, 861184, 861184, 861184, 861184, 861184, 876096, 876096, 876096, 876096, 876096, 876096, 876096, 876096, 891136, 891136, 891136, 891136, 891136, 891136, 891136, 891136, 906304, 906304, 906304, 906304, 906304, 906304, 906304, 906304, 921600, 921600, 921600, 921600, 921600, 921600, 921600, 921600, 937024, 937024, 937024, 937024, 937024, 937024, 937024, 937024, 952576, 952576, 952576, 952576, 952576, 952576, 952576, 952576, 968256, 968256, 968256, 968256, 968256, 968256, 968256, 968256, 984064, 984064, 984064, 984064, 984064, 984064, 984064, 984064]\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
+    "List_squares_mutiples_8 = []\n",
     "number_limit = 1\n",
     "\n",
     "while number_limit <1000:\n",
     "    if number_limit % 8 == 0:\n",
-    "        print(int(number_limit) * int(number_limit))\n",
+    "        squares = (number_limit * number_limit)\n",
+    "    number_limit += 1\n",
+    "    List_squares_mutiples_8.append(squares)\n",
     "\n",
-    "    number_limit += 1"
+    "print(List_squares_mutiples_8)    "
    ]
   },
   {
@@ -354,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of people: 15\n"
+      "Number of people: 5\n"
      ]
     }
    ],
@@ -436,11 +311,10 @@
     "        \"n_kids\": 5\n",
     "    }\n",
     "]\n",
-    "number_kids = 0\n",
-    "for person in people:\n",
-    "    number_kids = number_kids + person[\"n_kids\"]\n",
+    "\n",
+    "number_people = len(people)\n",
     "    \n",
-    "print(\"Number of people:\", len(people) + number_kids)\n",
+    "print(\"Number of people:\",  number_people)\n",
     "    "
    ]
   },
@@ -453,9 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
     "people = [\n",
@@ -485,7 +367,14 @@
     "        \"n_kids\": 5\n",
     "    }\n",
     "]\n",
-    "\n"
+    "kids = 0\n",
+    "for person in people:\n",
+    "    number_kids = person['n_kids']\n",
+    "    \n",
+    "    if number_kids > 0:\n",
+    "       kids += 1\n",
+    "\n",
+    "print(kids)\n"
    ]
   },
   {
@@ -497,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -555,15 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sonia\n",
-      "Lucía\n"
+      "[{'name': 'Sonia', 'age': 42, 'n_kids': 2}, {'name': 'Lucía', 'age': 23, 'n_kids': 3}]\n"
      ]
     }
    ],
@@ -586,20 +474,25 @@
     "        \"n_kids\": 1\n",
     "    },\n",
     "    {\n",
-    "        \"name\": \"Lucía\",\n",
-    "        \"age\": 22,\n",
-    "        \"n_kids\": 2\n",
+    "        \"name\": \"Lucía\", \"age\": 22, \"n_kids\": 2\n",
     "    },\n",
     "    {\n",
-    "        \"name\": \"Leo\",\n",
-    "        \"age\": 55,\n",
-    "        \"n_kids\": 5\n",
+    "        \"name\": \"Leo\", \"age\": 55, \"n_kids\": 5\n",
     "    }\n",
     "]\n",
+    "new_list_year = []\n",
     "\n",
     "for person in people:\n",
-    "    if person[\"name\"][-1] == 'a':\n",
-    "        print(person[\"name\"]) \n"
+    "    if person[\"name\"].endswith(\"a\"):\n",
+    "        new_person = {\n",
+    "            \"name\": person[\"name\"],\n",
+    "            \"age\": person[\"age\"] + 1,\n",
+    "            \"n_kids\": person[\"n_kids\"] + 1,\n",
+    "        }\n",
+    "        \n",
+    "        new_list_year.append(new_person)\n",
+    "\n",
+    "print(new_list_year)        \n"
    ]
   }
  ],
