--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -62,27 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FILLING\n",
-      "THEATRE\n",
-      "EASYGOING\n",
-      "STORY\n",
-      "ISLAND\n"
+      "['filling', 'theatre', 'easygoing', 'story', 'island']\n"
      ]
     }
    ],
    "source": [
     "# your code here\n",
-    "\n",
+    "List_words = []\n",
     "for word in words:\n",
     "    if len(word) >= 5:\n",
-    "       print(word.upper())"
+    "       List_words.append(word)\n",
+    "\n",
+    "print(List_words)"
    ]
   },
   {
